<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.ui.LanguageFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensanssemibold"
        android:text="@string/language"
        android:textColor="#333647"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title">

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/checkbox_background"
            android:fontFamily="@font/opensanssemibold"
            android:padding="20dp"
            android:checked="true"
            android:text="@string/english"
            android:textColor="@color/black"
            android:buttonTintMode="@null"
            android:buttonTint="@null"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <RadioButton
            android:id="@+id/turkish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/checkbox_background"
            android:fontFamily="@font/opensanssemibold"
            android:padding="20dp"
            android:text="@string/turkish"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/english" />

        <RadioButton
            android:id="@+id/german"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/checkbox_background"
            android:fontFamily="@font/opensanssemibold"
            android:padding="20dp"
            android:text="@string/german"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/turkish" />

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/checkbox_background"
            android:fontFamily="@font/opensanssemibold"
            android:padding="20dp"
            android:text="@string/spanish"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/german" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>