<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.register.ThirdFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensanssemibold"
        android:text="@string/title_third_fragment"
        android:textColor="#333647"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/info_third_fragment"
        android:textColor="#7C82A1"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintHeight_percent=".65"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:spanCount="2"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="336dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#475AD7"
        android:fontFamily="@font/opensansbold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_rv" />


</androidx.constraintlayout.widget.ConstraintLayout>